front-end: добавлены страницы заказов и корзины