@@ -5,8 +5,11 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
+import org.springframework.security.core.Authentication;
 import org.springframework.security.core.annotation.AuthenticationPrincipal;
 import org.springframework.security.core.userdetails.UserDetails;
+import org.springframework.stereotype.Controller;
+import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.*;
 import ru.mooncess.Pizzeria.dto.order.OrderDTO;
 import ru.mooncess.Pizzeria.dto.orderitem.OrderItemDTO;
@@ -21,7 +24,7 @@ import ru.mooncess.Pizzeria.services.UserService;
 import java.util.List;
 import java.util.stream.Collectors;
 
-@RestController
+@Controller
 @RequiredArgsConstructor
 @RequestMapping("/user")
 public class UserController {
@@ -37,29 +40,57 @@ public class UserController {
 
     @PreAuthorize("isAuthenticated()")
     @GetMapping("/basket")
-    public ResponseEntity<List<OrderItemDTO>> getBasket(@AuthenticationPrincipal UserDetails userDetails) {
+    public String getBasket(Authentication authentication, Model model, @AuthenticationPrincipal UserDetails userDetails) {
         User user = userRepository.findByEmail(userDetails.getUsername()).orElseThrow();
-        return ResponseEntity.ok(basketService.getItemsInBasketByUser(user).stream().map(orderItemMapper::toDto).collect(Collectors.toList()));
+        List<OrderItemDTO> allItem = basketService.getItemsInBasketByUser(user).stream().map(orderItemMapper::toDto).toList();
+        float total = 0;
+        for (OrderItemDTO i : allItem) {
+            total+=i.getPrice();
+        }
+        model.addAttribute("allItem", allItem);
+        model.addAttribute("total", total);
+
+        boolean isAuthenticated = authentication != null && authentication.isAuthenticated();
+        boolean isAdmin = false;
+        if (isAuthenticated) {
+            isAdmin = userDetails.getAuthorities().stream().anyMatch(authority -> authority.getAuthority().equals("ADMIN"));
+        }
+        model.addAttribute("isAdmin", isAdmin);
+        model.addAttribute("isAuthenticated", isAuthenticated);
+
+        return "user/basket";
     }
 
     @PreAuthorize("isAuthenticated()")
     @PostMapping("/basket/deleteItem/{itemId}")
-    public ResponseEntity<Boolean> deleteFromBasket(@AuthenticationPrincipal UserDetails userDetails, @PathVariable Long itemId) {
+    public String deleteFromBasket(@AuthenticationPrincipal UserDetails userDetails, @PathVariable Long itemId) {
         User user = userRepository.findByEmail(userDetails.getUsername()).orElseThrow();
-        return new ResponseEntity<>(basketService.deleteFromBasket(user, itemId), HttpStatus.OK);
+        basketService.deleteFromBasket(user, itemId);
+        return "redirect:/user/basket";
     }
 
     @PreAuthorize("isAuthenticated()")
     @PostMapping("/basket/confirm")
-    public ResponseEntity<OrderDTO> confirmOrder(@AuthenticationPrincipal UserDetails userDetails, @RequestBody String address) {
+    public String confirmOrder(@AuthenticationPrincipal UserDetails userDetails, @RequestParam ("address") String address) {
+        System.out.println("WORK HARDDDDD");
         User user = userRepository.findByEmail(userDetails.getUsername()).orElseThrow();
-        return ResponseEntity.ok(orderService.create(user, address));
+        orderService.create(user, address);
+        return "redirect:/user/order";
     }
 
     @PreAuthorize("isAuthenticated()")
     @GetMapping("/order")
-    public ResponseEntity<List<OrderDTO>> getAllOrderByBuyerId(@AuthenticationPrincipal UserDetails userDetails) {
+    public String getAllOrderByBuyerId(Authentication authentication, Model model, @AuthenticationPrincipal UserDetails userDetails) {
         User user = userRepository.findByEmail(userDetails.getUsername()).orElseThrow();
-        return ResponseEntity.ok(orderService.findAllByBuyerId(user));
+        List<OrderDTO> allOrder = orderService.findAllByBuyerId(user);
+        model.addAttribute("allOrder", allOrder);
+        boolean isAuthenticated = authentication != null && authentication.isAuthenticated();
+        boolean isAdmin = false;
+        if (isAuthenticated) {
+            isAdmin = userDetails.getAuthorities().stream().anyMatch(authority -> authority.getAuthority().equals("ADMIN"));
+        }
+        model.addAttribute("isAdmin", isAdmin);
+        model.addAttribute("isAuthenticated", isAuthenticated);
+        return "user/order";
     }
 }
